[package]
name = "tool-arg-defaults"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Apply per-tool default kwargs to LLM-generated tool calls. Caller-supplied values always win. Null is a real value, not 'use the default'. Operates over serde_json::Value."
authors = ["Mukunda Rao Katta <mukunda.vjcs6@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MukundaKatta/tool-arg-defaults-rs"
homepage = "https://github.com/MukundaKatta/tool-arg-defaults-rs"
documentation = "https://docs.rs/tool-arg-defaults"
readme = "README.md"
keywords = ["llm", "agents", "tool", "defaults", "kwargs"]
categories = ["api-bindings"]
exclude = [".github/*", "target/*", "*.log"]

[dependencies]
serde_json = "1"

[dev-dependencies]
serde_json = "1"
