[package]
name = "tool-arg-defaults"
version = "0.1.0"
edition = "2021"
description = "Fill in missing arguments on LLM tool calls with per-tool defaults"
license = "MIT"
repository = "https://github.com/MukundaKatta/tool-arg-defaults-rs"
keywords = ["agent", "tool", "defaults", "args", "llm"]
categories = ["api-bindings"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
serde_json = "1"
